Display a warning flag besides PermGen, Used memory, Used connections, File descriptors or Tomcat threads, when a value is near the maximum, in order to catch attention